apps/media/hoarder/deployment-chrome.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hoarder-chrome
  labels:
    app: hoarder-chrome
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hoarder-chrome
  template:
    metadata:
      labels:
        app: hoarder-chrome
    spec:
      containers:
        - name: chrome
          image: gcr.io/zenika-hub/alpine-chrome:123
          command:
            - chromium-browser
            - --headless
            - --no-sandbox
            - --disable-gpu
            - --disable-dev-shm-usage
            - --remote-debugging-address=0.0.0.0
            - --remote-debugging-port=9222
            - --hide-scrollbars
