apps/media/hoarder/deployment-meilisearch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hoarder-meilisearch
  labels:
    app: hoarder-meilisearch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hoarder-meilisearch
  template:
    metadata:
      labels:
        app: hoarder-meilisearch
    spec:
      containers:
        - name: meilisearch
          image: getmeili/meilisearch:v1.11.1
          volumeMounts:
            - name: meilisearch
              mountPath: /meili_data
      volumes:
        - name: meilisearch
          persistentVolumeClaim:
            claimName: meilisearch-pvc
