apps/media/hoarder/deployment-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hoarder-web
  labels:
    app: hoarder-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hoarder-web
  template:
    metadata:
      labels:
        app: hoarder-web
    spec:
      containers:
        - name: web
          image: ghcr.io/hoarder-app/hoarder:${HOARDER_VERSION:-release}
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data-pvc
