apps/media/hoarder/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: hoarder-web
spec:
  selector:
    app: hoarder-web
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
